<resources>
    <string name="logo_descripton">App FinanFácil</string>
    <string name="saldo">Saldo</string>
    <string name="qtd_saldo">R$ 3.500,00</string>
    <string name="historico">Histórico</string>
    <string name="des_historico">Botão de histórico</string>
    <string name="categorias">Categorias</string>
    <string name="des_categoria">Botão de categoria</string>
    <string name="registrar">Registrar</string>
    <string name="des_registrar">Botão de registrar</string>
    <string name="dashboard">Dashboard</string>
    <string name="des_dashboard">Botão de dashboard</string>
    <string name="despesas_por_categoria">Despesas por categoria</string>
    <string name="receita">Receita</string>
    <string name="qtd_receita">R$ 3.500,00</string>
    <string name="despesa">Despesa</string>
    <string name="qtd_despesa">R$ 1.200,00</string>
    <string name="des_img_receita">Receita</string>
    <string name="des_img_despesas">Despesa</string>
    <string name="categoria">Categoria</string>
    <string name="alimentacao">Alimentação</string>
    <string name="moradia">Moradia</string>
    <string name="transporte">Transporte</string>
    <string name="lazer">Lazer</string>
    <string name="nova_categoria">Criar nova categoria</string>
    <string name="nome">Nome</string>
    <string name="descrição">Descrição</string>
    <string name="orçamento">Orçamento</string>
    <string name="cor">Cor</string>
    <string name="receita_despesa">Receita/Despesa</string>
    <string name="value">Valor</string>
    <string name="zerado">R$0,00</string>
    <string name="receita_x_despesas">Receita x Despesas</string>
    <string name="comparacao_gastos">Comparação gastos</string>
    <string name="dica_negrito">Evite compras impulsivas!</string>
    <string name="dica">Pergunte-se: Eu realmente preciso disso?</string>
    <string name="botao_retorno_des">Botão de retornar para a tela anterior</string>
    <string name="cinza">cinza</string>
    <string name="pink">rosa</string>
    <string name="roxo">roxo</string>
    <string name="amarelo">amarelo</string>
    <string name="btn_ad_categoria_des">Botão para adicionar categoria</string>
    <string name="dashboard_money_Img">Imagem de dinheiro</string>


</resources>