<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_backgroud"
    android:orientation="vertical"
    android:paddingLeft="19dp"
    android:paddingTop="26dp"
    android:paddingRight="19dp"
    android:paddingBottom="34dp">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_descripton"
        android:src="@drawable/ic_app_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/card_rounded_background"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="15dp">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/saldo"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qtd_saldo"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/receita"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:contentDescription="@string/des_img_receita"
                    android:src="@drawable/ic_receita" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/receita"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/qtd_receita"
                        android:textColor="@color/light_green"
                        android:textSize="18dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/despesa"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:contentDescription="@string/des_img_despesas"
                    android:src="@drawable/ic_despesa" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/despesa"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/qtd_despesa"
                        android:textColor="@color/light_red"
                        android:textSize="18dp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="clip_horizontal|center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/historico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:background="@drawable/card_smaller_radius"
                android:contentDescription="@string/des_historico"
                android:padding="20dp"
                android:src="@drawable/ic_historico" />

            <TextView
                android:id="@+id/historico_text"
                android:layout_width="69dp"
                android:layout_height="wrap_content"
                android:text="@string/historico"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="clip_horizontal|center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/categoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:background="@drawable/card_rounded_background"
                android:contentDescription="@string/des_categoria"
                android:padding="20dp"
                android:src="@drawable/ic_categorias" />

            <TextView
                android:id="@+id/categoria_text"
                android:layout_width="74dp"
                android:layout_height="wrap_content"
                android:text="@string/categorias"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="clip_horizontal|center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/registrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:background="@drawable/card_rounded_background"
                android:contentDescription="@string/des_registrar"
                android:padding="20dp"
                android:src="@drawable/ic_registrar" />

            <TextView
                android:id="@+id/registrar_text"
                android:layout_width="69dp"
                android:layout_height="wrap_content"
                android:text="@string/registrar"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="96dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="clip_horizontal|center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/dashboard"
                android:layout_width="wrap_content"
                android:layout_height="71dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:background="@drawable/card_rounded_background"
                android:contentDescription="@string/des_dashboard"
                android:padding="20dp"
                android:src="@drawable/ic_dashboard" />

            <TextView
                android:id="@+id/dashboard_text"
                android:layout_width="69dp"
                android:layout_height="wrap_content"
                android:text="@string/historico"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/despesas_por_categorias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="13dp"
        android:contentDescription="@string/des_categoria"
        android:text="@string/despesas_por_categoria"
        android:textColor="@color/black"
        android:textSize="17dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="153dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/card_rounded_background"
        android:orientation="vertical">

    </LinearLayout>

    <TextView
        android:id="@+id/historico_h2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:text="@string/historico"
        android:textColor="@color/black"
        android:textSize="17dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="195dp"
        android:background="@drawable/card_rounded_background"
        android:orientation="vertical"></LinearLayout>


</LinearLayout>