<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/main_blue"
    android:paddingTop="26dp">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/botao_retorno_des"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/registrar"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/value_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:orientation="vertical"
        android:paddingStart="40dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_back"
        tools:layout_editor_absoluteX="18dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/spinner_income_outcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/input"
            android:inputType="text"
            android:text="@string/zerado"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:autofillHints="Título do registro" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/categorias_formulario"
        android:layout_width="412dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@drawable/card_rounded_forms"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingTop="70dp"
        android:paddingRight="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value_input_layout">

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="27dp"
            android:background="@drawable/input"
            android:drawableStart="@drawable/ic_nome"
            android:drawablePadding="14dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/nome"
            android:autofillHints="" />

        <EditText
            android:id="@+id/input_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="27dp"
            android:background="@drawable/input"
            android:drawableStart="@drawable/ic_description"
            android:drawablePadding="14dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/descrição"
            android:autofillHints="Descrição" />

        <EditText
            android:id="@+id/input_categoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="27dp"
            android:background="@drawable/input"
            android:drawableStart="@drawable/ic_categoria"
            android:drawableEnd="@drawable/ic_dropdown"
            android:drawablePadding="14dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/categoria"
            android:autofillHints="Categoria" />

        <EditText
            android:id="@+id/input_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="27dp"
            android:background="@drawable/input"
            android:drawableStart="@drawable/ic_money"
            android:drawableEnd="@drawable/ic_dropdown"
            android:drawablePadding="14dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/receita_despesa"
            android:autofillHints="Receita/Despesa" />


        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="27dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_add"
            app:layout_constraintTop_toBottomOf="@+id/parent"
            android:contentDescription="@string/btn_ad_categoria_des" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>