<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_blue"
    android:paddingTop="26dp">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:contentDescription="Botão de retornar para a tela anterior"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="" Of="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/categoria"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="26dp" />


    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/categorias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginTop="53dp"
        app:columnCount="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back"
        app:rowCount="2">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:layout_column="0"
            app:layout_row="0"
            android:paddingBottom="22dp"
            >


            <ImageView
                android:id="@+id/color_alimentacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:src="@drawable/color_alimentacao"
                />

            <TextView
                android:id="@+id/alimentacao_label"
                android:layout_width="143dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/alimentacao"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:layout_column="1"
            app:layout_row="0"
            android:paddingBottom="22dp">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:src="@drawable/color_transporte" />

            <TextView
                android:id="@+id/transporte"
                android:layout_width="147dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/transporte"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:layout_column="0"
            app:layout_row="1">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:src="@drawable/color_moradia" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="143dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/moradia"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:layout_column="1"
            app:layout_row="1">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:src="@drawable/lazer_color" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lazer"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.gridlayout.widget.GridLayout>

    <androidx.cardview.widget.CardView
        Of="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/categorias" />


</androidx.constraintlayout.widget.ConstraintLayout>